--- a/src/main/resources/templates/edit.mustache
+++ b/src/main/resources/templates/edit.mustache
@@ -1,11 +1,20 @@
+{{>layouts/header}}
 {{#article}}
-
-    <form action="/articles/{{id}}/update" method="post">
+    <form action="/articles/{{id}}/update" class="container" method="post">
         <input type="hidden" name="id" value="{{id}}"/>
-        <input type="text" name="title" value="{{title}}"/>
-        <input type="text" name="content" value="{{content}}"/>
-        <input type="submit" />
+        <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Title</label>
+            <input type="text" name="title" value="{{title}}" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <div id="emailHelp" class="form-text">제목을 입력해주세요.</div>
+        </div>
+        <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Content</label>
+            <input type="text" name="title" value="{{content}}" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <div id="emailHelp" class="form-text">내용을 입력해주세요.</div>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+        <a href="/articles" class="btn btn-warning">Article List</a>
+        <a href="/articles/{{id}}" class="btn btn-secondary">한개 조회 페이지</a>
     </form>
-    <a href="/articles">Article List</a>
-    <a href="/articles/{{id}}">한개 조회 페이지</a>
 {{/article}}
+{{>layouts/footer}}
