--- a/src/main/resources/templates/list.mustache
+++ b/src/main/resources/templates/list.mustache
@@ -1,11 +1,21 @@
-<div>
-    이 곳은 list입니다.
-    {{# article}}
+{{>layouts/header}}
+<table class="table table-striped">
+    <thead>
+    <tr>
+        <th scope="col">ID</th>
+        <th scope="col">Title</th>
+        <th scope="col">Content</th>
+    </tr>
+    </thead>
+    <tbody>
+    {{#article}}
         <tr>
             <th scope="row">{{id}}</th>
             <td><a href="/articles/{{id}}">{{title}}</a></td>
             <td>{{content}}</td>
         </tr>
     {{/article}}
-</div>
-<a href="/articles/new">New Article</a>
+    </tbody>
+</table>
+<a href="/articles/new" class="btn btn-success">New Article</a>
+{{>layouts/footer}}
