--- a/src/main/resources/templates/new.mustache
+++ b/src/main/resources/templates/new.mustache
@@ -1,5 +1,15 @@
-<form action="/articles" method="post">
-    <input type="text" name="title"/>
-    <input type="text" name="content"/>
-    <button type="submit">submit</button>
+{{>layouts/header}}
+<form action="/articles" class="container" method="post">
+    <div class="mb-3">
+        <label for="exampleInputEmail1" class="form-label">Title</label>
+        <input type="text" name="title"class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <div id="emailHelp" class="form-text">제목을 입력해주세요.</div>
+    </div>
+    <div class="mb-3">
+        <label for="exampleInputPassword1" class="form-label">Content</label>
+        <textarea class="form-control" name="content" id="exampleFormControlTextarea1" rows="3"></textarea>
+        <div id="emailHelp" class="form-text">내용을 입력해주세요.</div>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+{{>layouts/footer}}
